# PersonalDojo

./: .gitignore  L1_Exercise_1_Creating_a_Table_with_Postgres.ipynb  docker-compose.yml  pyproject.toml
1-data-modeling/: L1 Demo 0.ipynb  L1 Demo 2 Creating tables.ipynb
data_engineering/: Makefile  pyproject.toml
data_engineering/1-data-modeling/: L1 Demo 1.ipynb  L2_Exercise_1_Creating_Normalized_Tables.ipynb  L4_Exercise_1_Three_Queries_Three_Tables.ipynb  L4_Exercise_2_Primary_Key.ipynb  L4_Exercise_3_Clustering_Column.ipynb  L4_Exercise_4_Using_the_WHERE_Clause.ipynb
data_engineering/1-data-modeling/project_1/: create_tables.py  etl.ipynb  etl.py  sql_functions.py
data_engineering/2-cloud-data-warehouses/: L1_E1_-_Step_1_&_2.ipynb  L1_E1_-_Step_3.ipynb  L1_E1_-_Step_4.ipynb  L1_E1_-_Step_5.ipynb  L1_E2_-_1_-_Slicing_and_Dicing.ipynb  L1_E2_-_2_-_Roll_up_and_Drill_Down.ipynb  L1_E2_-_3_-_Grouping_Sets.ipynb  L1_E2_-_4_-_CUBE.ipynb  L1_E3_-_Columnar_Vs_Row_Storage.ipynb
data_engineering_nanodegree/: docker-compose.yml  notes.org  pyproject.toml
data_engineering_nanodegree/1-data-modeling/: L1_Exercise_2_Creating_a_Table_with_Apache_Cassandra.ipynb  L2_Exercise_1_Creating_Normalized_Tables.ipynb  L2_Exercise_2_Creating_Denormalized_Tables.ipynb  L4_Exercise_1_Three_Queries_Three_Tables.ipynb  L4_Exercise_2_Primary_Key.ipynb  L4_Exercise_3_Clustering_Column.ipynb  L4_Exercise_4_Using_the_WHERE_Clause.ipynb
data_engineering_nanodegree/2-cloud-data-warehouses/: L1_E1_-_Step_1_&_2.ipynb  L1_E1_-_Step_3.ipynb  L1_E1_-_Step_4.ipynb
(+7 files in other folders)
