[tool.poetry]
name = "data_engineering_nd"
version = "0.1.0"
description = ""
authors = ["Shahin <me@5hah.in>"]

[tool.poetry.dependencies]
python = "^3.7"
psycopg2-binary = "^2.8"
cassandra-driver = "^3.20.2"
numpy = "^1.18.1"
pandas = "^0.25.3"
jupyterlab = "^1.2.4"
ipython-sql = "^0.3.9"
pdbpp = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
